      is True. First mentioned in (#122), implemented in (#144).
    * Removed `concurrent_updates` and `inventory` argument from `WaveBank`.
      see (#147 and #152)
    * The `updated` column in wavebank is now correct (see #146, #147).
    * Fixed issue with using `ProcessPoolExecutor` in EventBank for `put_event`
      and `update_index` (see issues #158, #159, #161).
  - obsplus.interfaces
    * Added ProgressBar for defining classes compatible with how obsplus
      uses progress bar, modeled after the ProgressBar class from the
      progressbar2 library (see #106).
  - obsplus.stations
    * Fixed issue where networks and stations could be left un-pruned when
      querying on channel (see #115).
    * Handled an edge case in df_to_inv where an integer NSLC code gets
      misinterpreted by pandas (see #130 and #132).
  - obsplus.utils
    * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
    * Refactored all geodetics functions into one utility class (#147).
    * Moved all utility functions into one utility modules (#147).
    * Removed catalog_to_directory in favor of simply using put_events of
      EventBank (#147).
    * Moved all utils into a new utils module (see #147).
  - obsplus.validate
    * Added the obsplus.validate module which contains a simple framework for
      defining and running validators on python objects. Replaced the old
      event validation (see #122).
    * Added the validators created in (#64) to PR (#122).
  - obsplus.events
    * Dataframe_to_inventory can now fetch NRL responses (#125).
    * Changed event_to_dataframe (events_to_df) to report the used_phase_count
      attached to the preferred origin and fall back on counting the arrivals
      otherwise.
    * Added notes to the docstring of event_to_dataframe listing the
      assumptions that are made when extracting information from an Event.
  - obsplus.waveforms
    * Added assert_streams_almost_equal method (see #128).